Added petal components  (#3)
* Added tailwind

* Added petal components

* Updated formatter

* Updated README

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,6 @@
-body {
-  background-color: pink;
-}
+@import "tailwindcss/base";
+@import "../../deps/petal_components/assets/default.css";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+/* You can add custom styles here */
