--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,8 @@
 @import 'tailwindcss/utilities';
 
 /* You can add custom styles here */
+
+/* Dropdown icon rotation */
+details[open] > summary > .rotate_icon {
+  transform: rotate(90deg);
+}
