--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,4 +1,7 @@
 @import './font.css';
+@import './colors.css';
+@import './themes/dark.css';
+@import './themes/light.css';
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
