Set wide scrollbar to body

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -20,6 +20,12 @@
   background: transparent;
 }
 
+body::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background: transparent;
+}
+
 ::-webkit-scrollbar-thumb {
   background: var(--scrollbar-thumb);
   border-radius: 8px;
