Enhancement: Updated styling for scrollbars (#292)
* Updated styling for scrollbars

* Proper alignment of fullscreen button

* Fixed button alignment

* Set wide scrollbar to body

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7,3 +7,34 @@
 @import 'tailwindcss/utilities';
 
 /* You can add custom styles here */
+
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background: transparent;
+}
+
+.scrollbar-main::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background: transparent;
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb);
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scrollbar-thumb-hover);
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
