Task: implement displaying event handling time (#277)
* Get execution time using dbg trace return_from

* Implement callback execution time measuring

* Display callback execution time

* Add spinner

* Add parsing elapsed time

* Change execution time visualization

* Add timer

* Small tweaks

* Remove console.log

* Rename hook

* Change timer stopping

* Refactor

* Add tooltips

* Refactor

* Fix infinite loading spinner

* Show only finished callbacks on refresh

* Fix trace callback return after tracing stopped

* Save timestamp to trace from tracer handler

* Update TraceService test

* fix

* Update tests

* Add e2e test cases

--- a/assets/css/themes/dark.css
+++ b/assets/css/themes/dark.css
@@ -61,5 +61,8 @@
     --error-border: var(--gray-700);
     --error-icon: var(--swm-pink-80);
     --error-text: var(--swm-pink-80);
+
+    /* Warning */
+    --warning-text: var(--swm-yellow-40);
   }
 }
