--- a/assets/css/themes/dark.css
+++ b/assets/css/themes/dark.css
@@ -44,6 +44,10 @@
     --button-secondary-content: var(--gray-200);
     --button-secondary-content-hover: var(--gray-200);
 
+    /* Tooltip */
+    --tooltip-text: var(--gray-900);
+    --tooltip-bg: var(--swm-sea-blue-60);
+
     /* Icons */
     --accent-icon: var(--swm-sea-blue-60);
 
