Restored `.remove-arrow` class

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -46,6 +46,15 @@
 
 /* You can add custom styles here */
 
+.remove-arrow::-webkit-inner-spin-button,
+.remove-arrow::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.remove-arrow {
+  -moz-appearance: textfield;
+}
+
 * {
   scrollbar-width: thin;
   scrollbar-color: var(--scrollbar-thumb) transparent;
