--- a/assets/app/app.css
+++ b/assets/app/app.css
@@ -1,20 +1,20 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/container-queries';
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-@import './font.css';
-@import './colors.css';
-@import './themes/dark.css';
-@import './themes/light.css';
+@import "./styles/font.css";
+@import "./styles/colors.css";
+@import "./styles/themes/dark.css";
+@import "./styles/themes/light.css";
 
-@config "../tailwind.config.js";
+@config "./tailwind.config.js";
 
 @layer base {
   /* These are changes to make old styles work after migration to Tailwind 4 */
   button:not(:disabled),
-  [role='button']:not(:disabled) {
+  [role="button"]:not(:disabled) {
     cursor: pointer;
   }
 
