--- a/assets/app/app.css
+++ b/assets/app/app.css
@@ -4,12 +4,12 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
-@import './font.css';
-@import './colors.css';
-@import './themes/dark.css';
-@import './themes/light.css';
+@import './styles/font.css';
+@import './styles/colors.css';
+@import './styles/themes/dark.css';
+@import './styles/themes/light.css';
 
-@config "../tailwind.config.js";
+@config "./tailwind.config.js";
 
 @layer base {
   /* These are changes to make old styles work after migration to Tailwind 4 */
