--- a/assets/client/components/debug_options/debug_options.html
+++ b/assets/client/components/debug_options/debug_options.html
@@ -3,18 +3,78 @@
     class="live-debugger-tooltip-option"
     id="live-debugger-debug-tooltip-open-in-new-tab"
   >
-    Open in new tab
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="#001a72"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="lucide lucide-square-arrow-out-up-right-icon lucide-square-arrow-out-up-right"
+    >
+      <path d="M21 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h6" />
+      <path d="m21 3-9 9" />
+      <path d="M15 3h6v6" />
+    </svg>
+    <p>Open in new tab</p>
   </div>
   <div
     class="live-debugger-tooltip-option"
     id="live-debugger-debug-tooltip-inspect-elements"
   >
-    Inspect elements
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="#001a72"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="lucide lucide-square-dashed-mouse-pointer-icon lucide-square-dashed-mouse-pointer"
+    >
+      <path
+        d="M12.034 12.681a.498.498 0 0 1 .647-.647l9 3.5a.5.5 0 0 1-.033.943l-3.444 1.068a1 1 0 0 0-.66.66l-1.067 3.443a.5.5 0 0 1-.943.033z"
+      />
+      <path d="M5 3a2 2 0 0 0-2 2" />
+      <path d="M19 3a2 2 0 0 1 2 2" />
+      <path d="M5 21a2 2 0 0 1-2-2" />
+      <path d="M9 3h1" />
+      <path d="M9 21h2" />
+      <path d="M14 3h1" />
+      <path d="M3 9v1" />
+      <path d="M21 9v2" />
+      <path d="M3 14v1" />
+    </svg>
+    <p>Inspect elements</p>
   </div>
   <div
     class="live-debugger-tooltip-option"
     id="live-debugger-debug-tooltip-move-button"
   >
-    Move buttons
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="16"
+      height="16"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="#001a72"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="lucide lucide-move-icon lucide-move"
+    >
+      <path d="M12 2v20" />
+      <path d="m15 19-3 3-3-3" />
+      <path d="m19 9 3 3-3 3" />
+      <path d="M2 12h20" />
+      <path d="m5 9-3 3 3 3" />
+      <path d="m9 5 3-3 3 3" />
+    </svg>
+    <p>Move buttons</p>
   </div>
 </div>
