--- a/assets/client/client.css
+++ b/assets/client/client.css
@@ -17,6 +17,23 @@
   cursor: pointer;
 }
 
+#live-debugger-debug-button.live-debugger-inspect-mode {
+  background-color: #87cce8;
+}
+
+#live-debugger-debug-button.live-debugger-inspect-mode .live-debugger-bug-icon {
+  display: none;
+}
+
+#live-debugger-debug-button .live-debugger-inspect-icon {
+  display: none;
+}
+
+#live-debugger-debug-button.live-debugger-inspect-mode
+  .live-debugger-inspect-icon {
+  display: block;
+}
+
 #live-debugger-debug-tooltip {
   position: absolute;
   background: white;
