Moved more to html

--- a/assets/client/components/tooltip/tooltip.html
+++ b/assets/client/components/tooltip/tooltip.html
@@ -1,6 +1,18 @@
 <div id="live-debugger-tooltip" class="live-debugger-inspection-tooltip">
   <div class="live-debugger-tooltip-content">
     <div class="live-debugger-tooltip-module"></div>
-    <div class="live-debugger-tooltip-info"></div>
+    <div class="live-debugger-tooltip-info">
+      <div class="live-debugger-tooltip-info-item type-info">
+        <span class="label">Type:</span>
+        <span class="value">
+          <span class="type-text"></span>
+          <span class="live-debugger-type-square"></span>
+        </span>
+      </div>
+      <div class="live-debugger-tooltip-info-item id-info">
+        <span class="label"></span>
+        <span class="value"></span>
+      </div>
+    </div>
   </div>
 </div>
