Changed name of option in debug button

--- a/assets/client/components/debug_options/debug_options.html
+++ b/assets/client/components/debug_options/debug_options.html
@@ -50,7 +50,7 @@
       <path d="M21 9v2" />
       <path d="M3 14v1" />
     </svg>
-    <p>Inspect elements</p>
+    <p>Inspect in new tab</p>
   </div>
   <div
     class="live-debugger-tooltip-option"
