Add hooks for highlighting search phrase

--- a/assets/app/app.css
+++ b/assets/app/app.css
@@ -69,3 +69,7 @@ body {
   scrollbar-width: auto;
   scrollbar-color: var(--scrollbar-thumb) transparent;
 }
+
+::highlight(search-highlight) {
+  background-color: yellow;
+}
