--- a/assets/app/styles/themes/dark.css
+++ b/assets/app/styles/themes/dark.css
@@ -69,6 +69,7 @@
     /* Warning */
     --warning-text: var(--swm-yellow-40);
 
-    --search-highlight: var(--swm-yellow-100);
+    --search-highlight-bg: var(--swm-yellow-100);
+    --search-highlight-text: var(--gray-900);
   }
 }
