--- a/assets/app/styles/themes/light.css
+++ b/assets/app/styles/themes/light.css
@@ -68,5 +68,6 @@
   /* Warning */
   --warning-text: #9a7e00;
 
-  --search-highlight: var(--swm-yellow-80);
+  --search-highlight-bg: var(--swm-yellow-80);
+  --search-highlight-text: var(--slate-900);
 }
