Feature: Highlight search phrase inside callback trace body (#692)
* Add hooks for highlighting search phrase

* Change search from Trace struct to only args

* Change highlight color

* Remove test case

* Change text color in highlight

* Fix e2e tests

* Add search highlight in trace fullscreen

--- a/assets/app/app.css
+++ b/assets/app/app.css
@@ -69,3 +69,8 @@ body {
   scrollbar-width: auto;
   scrollbar-color: var(--scrollbar-thumb) transparent;
 }
+
+::highlight(search-highlight) {
+  background-color: var(--search-highlight-bg);
+  color: var(--search-highlight-text);
+}
