Fixed typo in debug button

--- a/assets/client/components/debug_options/debug_options.html
+++ b/assets/client/components/debug_options/debug_options.html
@@ -75,6 +75,6 @@
       <path d="m5 9-3 3 3 3" />
       <path d="m9 5 3-3 3 3" />
     </svg>
-    <p>Move buttons</p>
+    <p>Move button</p>
   </div>
 </div>
