--- a/assets/app/styles/themes/light.css
+++ b/assets/app/styles/themes/light.css
@@ -66,10 +66,10 @@
   --error-text: var(--red-800);
 
   /* Info */
-  --info-bg: var(--swm-green-20);
-  --info-border: var(--swm-green-40);
-  --info-icon: var(--swm-green-100);
-  --info-text: var(--swm-green-100);
+  --info-bg: var(--surface-0-bg);
+  --info-border: var(--default-border);
+  --info-icon: var(--primary-text);
+  --info-text: var(--primary-text);
 
   /* Warning */
   --warning-text: #9a7e00;
