Fix clickable button when inspecting and inspection when no debugButton

--- a/assets/client/client.css
+++ b/assets/client/client.css
@@ -19,6 +19,7 @@
 
 #live-debugger-debug-button.live-debugger-inspect-mode {
   background-color: #87cce8;
+  pointer-events: none;
 }
 
 #live-debugger-debug-button.live-debugger-inspect-mode .live-debugger-bug-icon {
