--- a/assets/app/styles/themes/light.css
+++ b/assets/app/styles/themes/light.css
@@ -71,11 +71,11 @@
   --info-icon: var(--primary-text);
   --info-text: var(--primary-text);
 
-  --diff-border: var(--swm-brand-additional);
-
   /* Warning */
-  --warning-text: #9a7e00;
+  --warning-text: #e6bf00;
 
   --search-highlight-bg: var(--swm-yellow-80);
   --search-highlight-text: var(--slate-900);
+
+  --diff-border: var(--swm-brand-additional);
 }
