--- a/assets/app/styles/themes/light.css
+++ b/assets/app/styles/themes/light.css
@@ -78,4 +78,7 @@
   --search-highlight-text: var(--slate-900);
 
   --diff-border: var(--swm-brand-additional);
+
+  --diff-pulse-bg: var(--swm-sea-blue-60);
+  --diff-pulse-text: var(--slate-900);
 }
